--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,9 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="facebook_app_id">1440070412991487</string>
+    <string name="fb_login_protocol_scheme">fb1440070412991487</string>
+    <string name="todo">TODO</string>
     <string name="checbox_title">I have read and accept the conditions for terms and services</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
     <string name="createButton">Create</string>
