--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,14 +28,19 @@
         <item>sport</item>
     </array>
     <string name="capacity">Capacity:</string>
-    <array name="capacity">
-        <item>one</item>
-        <item>two</item>
-        <item>three</item>
-        <item>four</item>
-    </array>
-    <string name="description_box">Description box....</string>
+    <string-array name="capacity">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
 
+    </string-array>
+    <string name="description_box">Description box....</string>
     <!--
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
@@ -46,7 +51,7 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-
+    <string name="starts">Start:</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
