--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_group_chat">GroupChatActivity</string>
     <string name="title_activity_main2">MainActivity</string>
+    <string name="current_user_id"></string>
 </resources>
